--- a/index.html
+++ b/index.html
@@ -719,9 +719,23 @@
           </ul>
         </div>
         <div class="footer-third-list">
-          <p class="footer-subtitle">
+          <p class="footer-subtitle form">
             knowing you're always on<br />the best energy deal.
           </p>
+          <form>
+            <label for="footer-input" class="footer-number-field-lable">
+              <input
+                type="number"
+                id="footer-input"
+                name="footer-input"
+                class="footer-number-field"
+                placeholder="Enter your phone number"
+              />
+              <svg class="footer-form-icon" width="18" height="28">
+                <use href="./images/icons.svg#icon-mobile-screen"></use>
+              </svg>
+            </label>
+          </form>
           <button class="footer-button" type="button">Sign up Now</button>
         </div>
       </div>
