--- a/pricing.html
+++ b/pricing.html
@@ -66,69 +66,107 @@
       <!--Початок секції price table-->
 
       <section>
-        <p>PRICING</p>
-        <h1>Let’s get some real work done here.</h1>
-        <p>
-          Prodict is your perfect solution for working. Get started now for free
-        </p>
-        <h3>Free</h3>
-        <p>Brief price description</p>
-        <p>0$ Per / month</p>
-        <ul>
-          <li>
-            <p>Only 2 Operators</p>
-          </li>
-          <li>
-            <p>Notifications</p>
-          </li>
-          <li>
-            <p>Landing Pages</p>
-          </li>
-        </ul>
-        <button type="button">Order Now</button>
-        <h3>Standard</h3>
-        <p>Brief price description</p>
-        <p>5$ Per / month</p>
-        <ul>
-          <li>
-            <p>5+ Operators</p>
-          </li>
-          <li>
-            <p>Notifications</p>
-          </li>
-          <li>
-            <p>Landing Pages</p>
-          </li>
-        </ul>
-        <button type="button">Order Now</button>
-        <h3>Premium</h3>
-        <p>Brief price description</p>
-        <p>10$ Per / month</p>
-        <ul>
-          <li>
-            <p>10+ Operators</p>
-          </li>
-          <li>
-            <p>Notifications</p>
-          </li>
-          <li>
-            <p>Landing Pages</p>
-          </li>
-        </ul>
-        <button type="button">Order Now</button>
+        <div class="container price-section-container">
+          <p class="price-section-title-subtitle">PRICING</p>
+          <h2 class="price-section-title pricing-page">
+            Let’s get some real work done here.
+          </h2>
+          <p class="price-section-description pricing-page">
+            Prodict is your perfect solution for working. Get started now for
+            free
+          </p>
+          <div class="price-section-cards">
+            <div class="price-section-card">
+              <h3 class="price-section-first-subtitle">Free</h3>
+              <p class="price-section-pay-method">Brief price description</p>
+              <p class="price-section-price">
+                <span class="amount">0<span class="currency">$</span></span>
+                <span class="per-month">Per / month</span>
+              </p>
+              <ul class="price-section-list">
+                <li class="price-section-list-item">
+                  <p class="price-section-list-item-text">Only 2 Operators</p>
+                </li>
+                <li class="price-section-list-item">
+                  <p class="price-section-list-item-text">Notifications</p>
+                </li>
+                <li class="price-section-list-item">
+                  <p class="price-section-list-item-text">Landing Pages</p>
+                </li>
+              </ul>
+              <button class="price-section-button" type="button">
+                Order Now
+              </button>
+            </div>
+            <div class="price-section-middle-card">
+              <h3 class="price-section-middle-subtitle">Standard</h3>
+              <p class="price-section-middle-pay-method">
+                Brief price description
+              </p>
+              <p class="price-section-price">
+                <span class="amount-middle"
+                  >5<span class="currency-middle">$</span></span
+                ><span class="per-month-middle">Per / month</span>
+              </p>
+              <ul class="price-section-middle-list">
+                <li class="price-section-list-item">
+                  <p class="price-section-list-item-text">5+ Operators</p>
+                </li>
+                <li class="price-section-list-item">
+                  <p class="price-section-list-item-text">Notifications</p>
+                </li>
+                <li class="price-section-list-item">
+                  <p class="price-section-list-item-text">Landing Pages</p>
+                </li>
+              </ul>
+              <button class="price-section-middle-button" type="button">
+                Order Now
+              </button>
+            </div>
+            <div class="price-section-card">
+              <h3 class="price-section-subtitle">Premium</h3>
+              <p class="price-section-pay-method">Brief price description</p>
+              <p class="price-section-price">
+                <span class="amount"
+                  >10<span class="currency-third">$</span></span
+                ><span class="per-month">Per / month</span>
+              </p>
+              <ul class="price-section-list">
+                <li class="price-section-list-item">
+                  <p class="price-section-list-item-text">10+ Operators</p>
+                </li>
+                <li class="price-section-list-item">
+                  <p class="price-section-list-item-text">Notifications</p>
+                </li>
+                <li class="price-section-list-item">
+                  <p class="price-section-list-item-text">Landing Pages</p>
+                </li>
+              </ul>
+              <button class="price-section-button" type="button">
+                Order Now
+              </button>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!--Кінець секції price table-->
 
       <!-- Початок секції enterprise -->
       <section>
-        <p>ENTERPRISE</p>
-        <h2>Are you interested in a custom-tailored plan?</h2>
-        <p>
-          Product is a set of advanced features for really large teams with
-          projects.
-        </p>
-        <button type="button">Get in touch with us</button>
+        <div class="container enterprise-container">
+          <p class="enterprise-section-subtitle">ENTERPRISE</p>
+          <h2 class="enterprise-section-title">
+            Are you interested in a custom-tailored plan?
+          </h2>
+          <p class="enterprise-section-description">
+            Product is a set of advanced features for really large teams with
+            projects.
+          </p>
+          <button class="enterprise-section-button" type="button">
+            Get in touch with us
+          </button>
+        </div>
       </section>
 
       <!-- Кінець секції enterpise -->
@@ -136,39 +174,74 @@
       <!-- Початок секції Product is being used with great effects alongside -->
 
       <section>
-        <h2>Product is being used with great effects alongside:</h2>
-        <img
-          src="./images/devices.png"
-          alt="devices"
-          width="532,2"
-          height="392"
-        />
-        <ul>
-          <li>
-            <img src="" alt="" width="" height="" />
-            <h3>Enterpreneur</h3>
-            <p>
-              Product is a great way to help medium and samall enterprise owners
-              achieve their goals
-            </p>
-          </li>
-          <li>
-            <img src="" alt="" width="" height="" />
-            <h3>Accountants</h3>
-            <p>
-              Whether you are working on contract with clients, or on other key
-              accounting documents, Product is for you
-            </p>
-          </li>
-          <li>
-            <img src="" alt="" width="" height="" />
-            <h3>Universities</h3>
-            <p>
-              Organize university projects and have documents easily graded
-              online with Product
-            </p>
-          </li>
-        </ul>
+        <div class="container product-is-used-container">
+          <h2 class="product-is-used-title">
+            Product is being used with great effects alongside:
+          </h2>
+          <div class="product-is-used-box">
+            <div class="product-is-used-image-thumb">
+              <img
+                class="product-is-used-image"
+                src="./images/devices.png"
+                alt="devices"
+                width="532,2"
+                height="392"
+              />
+            </div>
+            <div class="product-is-used-text-part">
+              <ul class="product-is-used-list">
+                <li class="product-is-used-list-item">
+                  <div class="product-is-used-image-and-titles">
+                    <img
+                      src="./images/Feature-Icon-with-circle.png"
+                      class="product-is-used-list-images"
+                      alt="decoration-image"
+                      width="50"
+                      height="50"
+                    />
+                    <h3 class="product-is-used-subtitles">Enterpreneur</h3>
+                  </div>
+                  <p class="product-is-used-descriptions">
+                    Product is a great way to help medium and samall enterprise
+                    owners achieve their goals
+                  </p>
+                </li>
+                <li class="product-is-used-list-item">
+                  <div class="product-is-used-image-and-titles">
+                    <img
+                      src="./images/Feature-Icon-with-circle-1.png"
+                      class="product-is-used-list-images"
+                      alt="decoration-image"
+                      width="50"
+                      height="50"
+                    />
+                    <h3 class="product-is-used-subtitles">Accountants</h3>
+                  </div>
+                  <p class="product-is-used-descriptions">
+                    Whether you are working on contract with clients, or on
+                    other key accounting documents, Product is for you
+                  </p>
+                </li>
+                <li class="product-is-used-list-item">
+                  <div class="product-is-used-image-and-titles">
+                    <img
+                      src="./images/Feature-Icon-with-circle-2.png"
+                      class="product-is-used-list-images"
+                      alt="decoration-image"
+                      width="50"
+                      height="50"
+                    />
+                    <h3 class="product-is-used-subtitles">Universities</h3>
+                  </div>
+                  <p class="product-is-used-descriptions">
+                    Organize university projects and have documents easily
+                    graded online with Product
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- Кінець секції Product is being used with great effects alongside -->
@@ -176,32 +249,77 @@
       <!-- Початок секції Frequently asked question -->
 
       <section>
-        <p>Something is not clear? You need help? Check our FAQ section</p>
-        <ul>
-          <li>
-            <img src="" alt="" />
-            <h3>What are my payment option?</h3>
-          </li>
-          <li>
-            <img src="" alt="" />
-            <h3>How can I invite collaborator to platform?</h3>
-            <p>
-              After creating your account you will have an oppurtunity to create
-              your first project that will be associated withthe collaborators
-              e-mail. An invitation will be sent automatically. Then, invited
-              user will have to confirm his account by e-mail and finish userd
-              onboarding.
-            </p>
-          </li>
-          <li>
-            <img src="" alt="" />
-            <h3>Can I upgrade my plan?</h3>
-          </li>
-          <li>
-            <img src="" alt="" />
-            <h3>Can I cancel my plan at anytime?</h3>
-          </li>
-        </ul>
+        <div class="container question-section-container">
+          <h2 class="question-section-title">Frequently asked question</h2>
+          <p class="question-section-subtitle">
+            Something is not clear? You need help? Check our FAQ section
+          </p>
+          <ul class="question-section-list">
+            <li class="question-section-list-item">
+              <div class="question-section-question">
+                <img
+                  src="./images/plus_circle.png"
+                  class="question-section-icons"
+                  alt="decoration"
+                  width="24"
+                  height="24"
+                />
+                <h3 class="question-section-list-titles">
+                  What are my payment option?
+                </h3>
+              </div>
+            </li>
+            <li class="question-section-list-item">
+              <div class="question-section-question">
+                <img
+                  src="./images/minus_circle.png"
+                  class="question-section-icons"
+                  alt="decoration"
+                  width="24"
+                  height="24"
+                />
+                <h3 class="question-section-list-titles">
+                  How can I invite collaborator to platform?
+                </h3>
+              </div>
+              <p class="question-section-list-text">
+                After creating your account you will have an oppurtunity to
+                create your first project that will be associated withthe
+                collaborators e-mail. An invitation will be sent automatically.
+                Then, invited user will have to confirm his account by e-mail
+                and finish userd onboarding.
+              </p>
+            </li>
+            <li class="question-section-list-item">
+              <div class="question-section-question">
+                <img
+                  src="./images/plus_circle.png"
+                  class="question-section-icons"
+                  alt="decoration"
+                  width="24"
+                  height="24"
+                />
+                <h3 class="question-section-list-titles">
+                  Can I upgrade my plan?
+                </h3>
+              </div>
+            </li>
+            <li class="question-section-list-item">
+              <div class="question-section-question">
+                <img
+                  src="./images/plus_circle.png"
+                  class="question-section-icons"
+                  alt="decoration"
+                  width="24"
+                  height="24"
+                />
+                <h3 class="question-section-list-titles">
+                  Can I cancel my plan at anytime?
+                </h3>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Кінець секції Frequently asked question -->
