--- a/customer.html
+++ b/customer.html
@@ -49,7 +49,7 @@
             </li>
             </li>
             <li class="header-nav-list-item">
-              <a href="./index.html" class="link list-button">Resources</a>
+              <a href="./resources.html" class="link list-button">Resources</a>
             </li>
           </ul>
         </nav>
@@ -346,7 +346,7 @@
           <p class="footer-subtitle form">knowing you're always on<br /> the best energy deal.</p>
           <form>
             <label for="footer-input" class="footer-number-field-lable">
-              <input type="number" id="footer-input" name="footer-input" class="footer-number-field customer" />
+              <input type="tel" id="footer-input" name="footer-input" class="footer-number-field customer" />
             </label>
           </form>
           <button class="footer-button" type="button">Sign up Now</button>
