--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a href="./customer.html" class="link list-button">Customers</a>
             </li>
             <li class="header-nav-list-item">
-              <a href="./index.html" class="link list-button">Resources</a>
+              <a href="./resources.html" class="link list-button">Resources</a>
             </li>
           </ul>
         </nav>
@@ -725,7 +725,7 @@
           <form>
             <label for="footer-input" class="footer-number-field-lable">
               <input
-                type="number"
+                type="tel"
                 id="footer-input"
                 name="footer-input"
                 class="footer-number-field"
