--- a/pricing.html
+++ b/pricing.html
@@ -48,7 +48,7 @@
               >
             </li>
             <li class="header-nav-list-item">
-              <a href="./index.html" class="link list-button">Resources</a>
+              <a href="./resources.html" class="link list-button">Resources</a>
             </li>
           </ul>
         </nav>
@@ -327,59 +327,124 @@
       <!--Початок секції promo-->
 
       <section>
-        <h3 hidden>Promo</h3>
-        <p>Join 100 Compannies who boost their business with Product</p>
-        <button type="button">Get This</button>
-        <img
-          src="./images/promo-image.png"
-          alt="promo-image"
-          width="361"
-          height="341"
-        />
+        <div class="container customer-page-promo-container">
+          <h3 class="customer-page-promo-title visually-hidden">Promo</h3>
+          <div class="customer-page-promo-text-and-button">
+            <p class="customer-page-promo-text">
+              Join 100 Compannies who boost their business with Product
+            </p>
+            <button class="customer-page-promo-button" type="button">
+              Get This
+            </button>
+          </div>
+          <div class="customer-page-promo-thumb">
+            <img
+              class="customer-page-promo-image"
+              src="./images/promo-image.png"
+              alt="promo-image"
+              width="361"
+              height="341"
+            />
+          </div>
+        </div>
       </section>
 
       <!--Кінець секції promo-->
     </main>
 
     <footer>
-      <a href="./index.html" class="link"
-        ><img
-          src="./images/logo.png"
-          alt="logo-picture"
-          width="40"
-          height="36"
-        />Product</a
-      >
-      <p>Resource</p>
-      <ul>
-        <li>
-          <p>About Us</p>
-        </li>
-        <li>
-          <p>Blog</p>
-        </li>
-        <li>
-          <p>Contact</p>
-        </li>
-        <li>
-          <p>FAQ</p>
-        </li>
-      </ul>
-      <p>Legal Stuff</p>
-      <ul>
-        <li>
-          <p>Disclaimer</p>
-        </li>
-        <li>
-          <p>Financing</p>
-        </li>
-        <li>
-          <p>Privacy Policy</p>
-        </li>
-      </ul>
-      <p>knowing you're always on the best energy deal.</p>
-      <button type="button">Sign up Now</button>
-      <p>Made With Love By Figmaland All Right Reserved</p>
+      <div class="container footer-container">
+        <div class="footer-logo-box">
+          <a href="./index.html" class="footer-logo-link"
+            ><img
+              class="footer-logo-image-part"
+              src="./images/logo.png"
+              alt="logo-picture"
+              width="40"
+              height="36"
+            /><span class="footer-logo-text-part">Product</span></a
+          >
+        </div>
+        <ul class="footer-social-media-list">
+          <li class="footer-social-media-list-item">
+            <a class="footer-social-media-list-item-link" href="">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-media-list-item">
+            <a class="footer-social-media-list-item-link" href="">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-media-list-item">
+            <a class="footer-social-media-list-item-link" href="">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <div class="footer-first-list-box">
+          <p class="footer-subtitle">Resource</p>
+          <ul class="footer-first-list">
+            <li class="footer-first-list-item">
+              <a href="" class="footer-first-list-item-text">About Us</a>
+            </li>
+            <li class="footer-first-list-item">
+              <a href="" class="footer-first-list-item-text">Blog</a>
+            </li>
+            <li class="footer-first-list-item">
+              <a href="" class="footer-first-list-item-text">Contact</a>
+            </li>
+            <li class="footer-first-list-item">
+              <a href="" class="footer-first-list-item-text">FAQ</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-second-list-box">
+          <p class="footer-subtitle">Legal Stuff</p>
+          <ul class="footer-first-list">
+            <li class="footer-first-list-item">
+              <a href="" class="footer-first-list-item-text">Disclaimer</a>
+            </li>
+            <li class="footer-first-list-item">
+              <a href="" class="footer-first-list-item-text">Financing</a>
+            </li>
+            <li class="footer-first-list-item">
+              <a href="" class="footer-first-list-item-text">Privacy Policy</a>
+            </li>
+            <li class="footer-first-list-item">
+              <a href="" class="footer-first-list-item-text">
+                Terms of Service
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-third-list">
+          <p class="footer-subtitle form">
+            knowing you're always on<br />
+            the best energy deal.
+          </p>
+          <form>
+            <label for="footer-input" class="footer-number-field-lable">
+              <input
+                type="tel"
+                id="footer-input"
+                name="footer-input"
+                class="footer-number-field customer"
+              />
+            </label>
+          </form>
+          <button class="footer-button" type="button">Sign up Now</button>
+        </div>
+      </div>
+      <p class="footer-aftertext">
+        Made With Love By Figmaland All Right Reserved
+      </p>
     </footer>
   </body>
 </html>
